Change to button text

--- a/client/app/views/time_slots/_table.html.haml
+++ b/client/app/views/time_slots/_table.html.haml
@@ -12,5 +12,5 @@
           -if false
             %td.link
               =link_to("Book a date", time_slot)
-=link_to 'Book me in', time_slots.first, :class => 'bttn fr'
+=link_to 'Book it', time_slots.first, :class => 'bttn fr'
 %br.clear
