--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -9,13 +9,11 @@ activity_search_row/* @override
 */
 
 /* Add google web fonts here- take away if not needed */
-@import url('http://fonts.googleapis.com/css?family=Merriweather:light,regular,bold,900');
-@import url('http://fonts.googleapis.com/css?family=Droid+Sans:400,700&v2');
 /* ===============================  Reset styles ================================ */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
 
 /* ===============================  text styles ================================ */
-body, textarea, input {font:13px/1.6 'Merriweather', Arial,'Liberation Sans',FreeSans,sans-serif}a:focus{outline:1px dotted invert}hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}h1{font-size:25px}h2{font-size:23px}h3{font-size:21px}h4{font-size:19px}h5{font-size:17px}h6{font-size:15px}ol{list-style:decimal}ul{list-style:disc}li{margin-left:30px}p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:13px}
+body, textarea, input {font:13px/1.6 georgia, serif, Arial,'Liberation Sans',FreeSans,sans-serif}a:focus{outline:1px dotted invert}hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}h1{font-size:25px}h2{font-size:23px}h3{font-size:21px}h4{font-size:19px}h5{font-size:17px}h6{font-size:15px}ol{list-style:decimal}ul{list-style:disc}li{margin-left:30px}p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:13px}
 
 /* ======================  CSS3 regularly used stuff ================== */
 
@@ -36,13 +34,13 @@ body span.cal_sheet span.month {
 
 h1, h2, h3, h4, h5, h6, #nav, #subnav, #user_links .button, .bring_quote, .cycle_nav a, .call_to_action, #beta_bar, .organisation_signup_link {
 
-  font-family: 'Merriweather', arial, serif;
+  font-family: palatino, 'palatino linotype', Georgia, 'Times New Roman', Times;
   color:black;
 	font-weight: lighter;
 
 }
 #feature_panel_nav a {
-	font-family:'droid sans', arial, sans-serif;
+	font-family:arial, sans-serif;
 }
 #page_left_col, #page_right_col, p.index_text, p.blog_like_news_text {
 	color: #666;
@@ -1762,7 +1760,7 @@ p.latest_text {
   line-height: 16px;
   height: 34px;
   overflow: hidden;
-  font-family: droid sans, arial, sans serif;
+
 
 
 }
