--- a/client/app/views/admin/index.html.haml
+++ b/client/app/views/admin/index.html.haml
@@ -25,6 +25,14 @@
       %ul
         %li=link_to("List activities", activities_path)
         %li=link_to("Add an activity", new_activity_path)
+    #dash_blogs.dash_item
+      %h3
+        Blog
+      %ul
+        %li=link_to("Add a blog post", new_blog_path)
+        %li=link_to("List blog posts", blog_blog_posts_path(Blog.main))
+        %li=link_to("List blog post categories", blog_post_categories_path)
+        %li=link_to("Edit blog", edit_blog_path(Blog.main))
     #dash_images.dash_item
       .dash_icon
       %h3
