--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -25,11 +25,11 @@
       #feature_panel_info_2.feature_panel_info
         %h3 Help us grow
         %p Suggest 'Spots of Time' to organisations in your area and make it easy for people to give their time to benefit the community.
-      #feature_panel_info_3.feature_panel_info
-        %h3=link_to_self @blog_post
-        %p=strip_tags @blog_post.text.word_truncate(150)
-      -if false
-        Disabled - replaced with latest blog post
+      -if @blog_post
+        #feature_panel_info_3.feature_panel_info
+          %h3=link_to_self @blog_post
+          %p=strip_tags @blog_post.text.word_truncate(150)
+      -else
         #feature_panel_info_3.feature_panel_info
           %h3 Anytime anywhere
           Start changing your corner of the world with our simple anytime anywhere ideas that will bring a smile to you and those around you.
@@ -37,7 +37,11 @@
     .feature_panel_right
       =image_tag("how-it-works-user.jpg", "data-slide-num" => 1)
       =image_tag("how-it-works-org.jpg", "data-slide-num" => 2)
-      =image_tag("feature-panel.jpg", "data-slide-num" => 3)
+      -if @blog_post.try(:has_photo?)
+        #feature_panel_blog_photo_wrapper{'data-slide-num' => 3}
+          =photo_for(@blog_post, '626x200')
+      -else
+        =image_tag("feature-panel.jpg", "data-slide-num" => 3)
 .row
   .twelvecol.last
     -if !Activity.anytime.empty?
@@ -52,14 +56,3 @@
         -link_to(activity, :class => "activity type_#{activity.activity_type}") do
           =image_for(activity, "124x124#")
           .label=activity
-.row
-  .ninecol
-    %h2 Blog
-    -if Blog.first && post = Blog.first.posts.latest.first
-      %p
-        %strong
-          =link_to(post.title, post)
-      %p=post.created_at.strftime("%d %B %Y")
-      =simple_format(strip_tags(post.text.word_truncate(250)))
-      =link_to('More', post)
-  .threecol.last
