--- a/client/app/views/time_slots/index.html.haml
+++ b/client/app/views/time_slots/index.html.haml
@@ -15,6 +15,8 @@
   .fourcol.last
     -if params[:signup] #just signed up
       =link_to("Skip this for now &rarr;", @organisation, :id => "skip_time_slots_link")
+    -else
+      =link_to("Ok, I'm done", @organisation, :class => "bttn_l", :id => "skip_time_slots_link")
 -@organisation.ordered_activities.each do |activity|
   .row.activity_row
     .twocol
