Added headline text above feature panel

--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -16,6 +16,9 @@
     });
 -no_content_row
 -hidden_title "Spots of Time"
+#headline.row
+  .twelvecol
+    We make it easy for you to do fun, inspiring &amp; bite-size activities to benefit people in your community.
 #feature_panel_row.row
   .twelvecol
     .feature_panel_left
