--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -6580,6 +6580,12 @@ form.organisation ol li label span, .organisation_label_wrapper p {
 }
 
 /*========== Feature panel ==========*/
+#headline {
+  margin-bottom: 30px;
+  font-size: 32px;
+  line-height: 42px;
+}
+
 #feature_panel_row {
   margin-bottom: 30px;
   
