Added icon for newsletter next to Twitter and FB icons

--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -1368,6 +1368,14 @@ a.social_media_link {
 	
 }
 
+a.twitter_link {
+	background-position: top;
+	margin-left: 10px;
+}
+a.mailchimp_link {
+	background-position: top left;
+	margin-left: 10px;
+}
 a.facebook_link {
 	background-position: top right;
 	margin-left: 10px;
