Changed header text above map on activity page. Removed postcode search. Moved 'not found anything?' box to under map.

--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -6483,7 +6483,7 @@ table.time_slots td.link {width:20%;}
 }
 div.not_found_anything {
 	margin: 0;
-	width: 400px;
+	width: 95%;
 }
 .not_found_anything a.bttn {
 	display: inline;
