--- a/client/app/views/activities/show.html.haml
+++ b/client/app/views/activities/show.html.haml
@@ -32,13 +32,13 @@
 -if @organisation.nil? && @activity.activity_type=="volunteering"
   #activity_search_row.row
     .fivecol
-      %h4 Find somewhere to do this activity
-      #postcode_search
+      %h4 Places to do this activity
+      -#postcode_search
         =text_field_tag :postcode, params[:postcode], :class => "labelify fl", :title => "e.g. SW1 2BJ", :onkeypress => "if (event.keyCode==13) {ActivityMap.findPostCode('#{@activity.id}');} else {return true;}"
         =link_to_function("Go", "ActivityMap.findPostCode('#{@activity.id}')", :class => "bttn_l")
         =image_tag("ajax_loader_squares.gif", :id => "activity_map_loader", :style => "display:none")
         #address_not_found Unknown location        
-      #find_me_automatically
+      -#find_me_automatically
         or
         =link_to_function("Find me automatically", "ActivityMap.findMe('#{@activity.id}')")
       =google_map(@activity.time_slots.confirmed.group_by_organisation.collect(&:organisation), :width => "100%", :height => 300, :version => "3.5", :marker_options => {:click => true}, :auto_bounds => true)
@@ -47,6 +47,11 @@
         %ul.lst#activity_documents
           -@activity.documents.each do |document|
             %li=render('documents/document', :document => document)
+      .not_found_anything.subrow
+        %h4
+          Not found anything near you?
+        %p  
+          =link_to_slug("Set up Spots of Time in your area.", :organisations, :class=>'bttn')                  
       
     .sevencol.last
       .subrow
@@ -62,11 +67,6 @@
                   -link_to(activity, :class => "activity") do
                     =image_for(activity, "147x147#")
                     .label=activity
-      .not_found_anything.subrow
-        %h4
-          Not found anything near you?
-        %p  
-          =link_to_slug("Set up Spots of Time in your area.", :organisations, :class=>'bttn')                  
         
 .row
   .twelvecol
