Moved 'share with others' link to the left of the social media blobs

--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -6374,9 +6374,10 @@ form.time_slot li.commit, form.time_slot .edit_link {
 
 .share_box a {
   display: inline-block;
-  padding: 10px 10px 10px 163px;
+  padding: 10px 163px 10px 0px;
   background-image: url('/images/social_media_links.png');
   background-repeat: no-repeat;
+  background-position: center right;
 }
 
 #activity_search_row, #activity_search_results {
