Added logos to footer

--- a/client/app/views/layouts/_footer.html.haml
+++ b/client/app/views/layouts/_footer.html.haml
@@ -20,7 +20,12 @@
           =link_to("Site map", "/sections") 
                
     =link_to("site by <span>Yoomee</span>", "http://www.yoomee.com", :id => "siteby")
-      
+
+  .row
+    .logos
+      %img{:src => "/images/logos-100.png"}
+      %img{:src => "/images/unltd-50.png"}
+      %img{:src => "/images/nexters-50.png"}
 
 %div{:style=>"display:none"}
   #login_popup
