--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -1,19 +1,21 @@
 -content_for :head do
-  :javascript
-    $(document).ready(function(){
-      $('.feature_panel_right').cycle({
+  :coffeescript
+
+    $ ->
+
+      ActivityFilter.filter('volunteering')
+    
+      $('.feature_panel_right').cycle
         fx: 'scrollHorz',
         speed: 'slow',
         timeout: 0,
         easing: 'easeOutQuint',
         pager: '#feature_panel_nav',
-        before: function(currSlideElement, nextSlideElement, options, forwardFlag) {
-          var slideNum = $(nextSlideElement).attr("data-slide-num");
-          $(".feature_panel_info").hide();
-          $("#feature_panel_info_" + slideNum).fadeIn();
-        }
-      });
-    });
+        before: (currSlideElement, nextSlideElement, options, forwardFlag) ->
+          slideNum = $(nextSlideElement).attr 'data-slide-num'
+          $('.feature_panel_info').hide()
+          $('#feature_panel_info_' + slideNum).fadeIn()
+
 -no_content_row
 -hidden_title "Spots of Time"
 .row.headline
@@ -55,12 +57,12 @@
     -if !Activity.anytime.empty?
       #activity_filter
         %span Filter activities by:
-        =link_to_function("All", "ActivityFilter.filter('all')", :id => "activity_filter_all", :class => "active")
-        =link_to_function("Volunteering", "ActivityFilter.filter('volunteering')", :id => "activity_filter_volunteering")
+        =#link_to_function("All", "ActivityFilter.filter('all')", :id => "activity_filter_all", :class => "active")
+        =link_to_function("Volunteering", "ActivityFilter.filter('volunteering')", :id => "activity_filter_volunteering", :class => 'active')
         =link_to_function("Anytime anywhere", "ActivityFilter.filter('anytime')", :id => "activity_filter_anytime")
   .twelvecol
     .activity_grid
-      -Activity.all.each do |activity|
+      -@activities.each do |activity|
         -link_to(activity, :class => "activity type_#{activity.activity_type}") do
           =image_for(activity, "124x124#")
           .label=activity
