--- a/client/app/views/sections/show.html.haml
+++ b/client/app/views/sections/show.html.haml
@@ -2,7 +2,7 @@
 -no_content_row
 .row.header
   %h1#page_title
-    Organisations
+    =@section
 
   -if @section.slug_is?(:organisations)
     #organisation_signup_button
