--- a/client/app/views/admin/index.html.haml
+++ b/client/app/views/admin/index.html.haml
@@ -75,7 +75,8 @@
       %h3
         Emails
       %ul
-        %li=link_to("Activity passed email (volunteer)", edit_mailing_path(Mailing.find_by_name('activity_passed_volunteer')))        
+        -if Mailing.activity_passed_volunteer
+          %li=link_to("Activity passed (volunteer)", edit_mailing_path(Mailing.activity_passed_volunteer))        
   #dash_membership.dash_col.fourcol.last
     %h2
       Membership
