--- a/client/app/views/organisations/show.html.haml
+++ b/client/app/views/organisations/show.html.haml
@@ -15,7 +15,8 @@
     =link_if_allowed("List activities", organisation_time_slots_proc(:organisation_id => @organisation), :class=>"bttn")
     =link_if_allowed("List volunteers", organisation_time_slot_bookings_proc(:organisation_id => @organisation), :class=>"bttn")
     =link_if_allowed("Edit organisation", edit_organisation_proc(@organisation), :class=>"bttn")
-    
+    -if admin_logged_in?
+      =link_to("Edit lead contact", [:edit, @organisation.member], :class => 'bttn')
     -if !@organisation.confirmed? && allowed_to?(confirm_organisation_proc(@organisation))
       %p.confirm_message
         =link_to 'This organisation has not been confirmed yet. Click here to confirm them and make their activities visible on the site.', confirm_organisation_path(@organisation)
@@ -28,18 +29,30 @@
       .subrow
         %hr
         %h4 Contact details
-        %p 
-          %strong Lead contact
-          %br
-          =link_to_self @organisation.member
-        %p
-          %strong Email
-          %br
-          =link_to @organisation.email, "mailto:#{@organisation.email}"
-        %p
-          %strong Member type
-          %br
-          =member_type(@organisation.member)
+        .threecol
+          %p 
+            %strong Lead contact
+            %br
+            =link_to_self @organisation.member
+          %p
+            %strong Email
+            %br
+            =link_to @organisation.email, "mailto:#{@organisation.email}"
+          -if @organisation.phone.present?
+            %p
+              %strong Phone number
+              %br
+              =@organisation.phone
+        .threecol
+          -if @organisation.group_type.present?
+            %p
+              %strong Group type
+              %br
+              =@organisation.group_type
+          %p
+            %strong Member type
+            %br
+            =member_type(@organisation.member)
     .subrow
       %hr
       %h4 What can you do to help out?
