--- a/client/app/views/notifier/time_slot_booking_for_organisation.text.html.haml
+++ b/client/app/views/notifier/time_slot_booking_for_organisation.text.html.haml
@@ -3,7 +3,10 @@
 
 %p
   ="<strong>#{@time_slot_booking.member}</strong> has volunteered to <strong>#{@time_slot_booking.activity}</strong> on #{@time_slot_booking.starts_at_neat_string}."
-
+-if @time_slot_booking.notes.present?
+  %p
+    More details:
+    =@time_slot_booking.notes
 %p
   =link_to("Click here", site_url + organisation_time_slot_bookings_path(@time_slot_booking.organisation))
   ="to view the spot and choose to confirm it."
