--- a/client/app/views/time_slots/show.html.haml
+++ b/client/app/views/time_slots/show.html.haml
@@ -27,25 +27,32 @@
     -if !@time_slot.note.blank?
       %p
         =@time_slot.note
-#time_slot_booking_form.row
-  .twelvecol
-    %h4 Thanks for offering to help out. When's good for you?
-  .fourcol
-    #starts_at_datepicker
-  .fourcol.last
-    -if !@time_slot_booking.errors.empty?
-      #time_slot_booking_error
-        Make sure you pick an available date using the calendar on the left.
-    -semantic_form_for(@time_slot_booking) do |form|
+-semantic_form_for(@time_slot_booking) do |form|
+  #time_slot_booking_form.row
+    .twelvecol
+      %h4 Thanks for offering to help out. When's good for you?
+      .fourcol
+        #starts_at_datepicker
+      .fourcol.last
+        -if !@time_slot_booking.errors.empty?
+          #time_slot_booking_error
+            Make sure you pick an available date using the calendar on the left.
+        -form.inputs do
+          =form.input :time_slot_id, :as => :hidden
+          =form.input :starts_at, :as => :hidden
+          =form.input :starts_at_time_string, :as => :select, :collection => @time_slot.possible_time_strings, :include_blank => false, :label => "Time:", :wrapper_html => {:class => "inline-fields"}
+          %li
+            %p Click a date on the calendar, choose a time you'd like to arrive.
+  .row
+    .eightcol
       -form.inputs do
-        =form.input :time_slot_id, :as => :hidden
-        =form.input :starts_at, :as => :hidden
-        =form.input :starts_at_time_string, :as => :select, :collection => @time_slot.possible_time_strings, :include_blank => false, :label => "Time:", :wrapper_html => {:class => "inline-fields"}
-        %li
-          %p Click a date on the calendar, choose a time you'd like to arrive and hit the button below.
+        =form.input :notes, :as => :text, :input_html => {:rows => 2}, :label => 'Add a note to the organisation to tell them more about what you plan to do e.g. type of performance, craft activity, pamper treat, quiz or game.'
         =form.commit_button "COUNT ME IN", :button_html => {:id => "time_slot_booking_submit", :style => "display:#{logged_in? ? 'block' : 'none'}"}
         -if logged_out?
           %li.commit=link_to_function("COUNT ME IN", "FBLogin.process()", :class => "bttn_l")
+
+
+
 .row
   .twelvecol
     =google_map(@time_slot, :width => "100%", :height => 500, :version => "3.5", :infoboxes => true)
