--- a/client/app/views/organisations/_form.html.haml
+++ b/client/app/views/organisations/_form.html.haml
@@ -10,14 +10,16 @@
       =location_form.input :address2, :label => false, :input_html => {:class => "labelify", :title => "Address 2"}
       =location_form.input :city, :label => false, :input_html => {:class => "labelify", :title => "City"}
       =location_form.input :postcode, :label => false, :input_html => {:class => "labelify", :title => "Postcode"}
-      =location_form.input :lat, :as => :hidden, :input_html => {:id => "organisation_lat"}
-      =location_form.input :lng, :as => :hidden, :input_html => {:id => "organisation_lng"}
+      -unless organisation.new_record?
+        =location_form.input :lat, :as => :hidden, :input_html => {:id => "organisation_lat"}
+        =location_form.input :lng, :as => :hidden, :input_html => {:id => "organisation_lng"}
   -form.inputs do
     =form.input :phone, :label => 'Phone number'
-  #organisation_map
-    %label
-      You can drag the marker below to specify the location of your organisation.
-    =google_map(organisation, :marker_options => {:draggable => true, :dragend => "function() {OrganisationForm.saveLatLng('#{organisation.id}');}"})
+  -unless organisation.new_record?
+    #organisation_map
+      %label
+        You can drag the marker below to specify the location of your organisation.
+      =google_map(organisation, :marker_options => {:draggable => true, :dragend => "function() {OrganisationForm.saveLatLng('#{organisation.id}');}"})
   -form.inputs do
     %li.organisation_label_wrapper
       =form.label :description, "Description for your profile page"
