Added documents to organisations

--- a/client/app/views/documents/_form.html.haml
+++ b/client/app/views/documents/_form.html.haml
@@ -8,5 +8,6 @@
     =form.input :file, :as => :file
     =form.input :member_id, :as => :hidden
     =form.input :activity_id, :as => :hidden
+    =form.input :organisation_id, :as => :hidden
   - form.buttons do
     = form.commit_button 'Save'
