--- a/client/app/views/organisations/show.html.haml
+++ b/client/app/views/organisations/show.html.haml
@@ -9,6 +9,12 @@
       %h4 Where?
       =render_address(@organisation.location) unless @organisation.location.unknown?
       =google_map(@organisation, :width => "100%", :height => 350, :zoom => 7, :infoboxes => true) if @organisation.has_lat_lng?
+    -unless @organisation.documents.empty?
+      .subrow
+        %h4#organisation_documents_header More information
+        %ul.lst#organisation_documents
+          -@organisation.documents.each do |document|
+            %li=render('documents/document', :document => document)
   .ninecol.last
     %h1=@organisation
     
@@ -61,6 +67,7 @@
           -link_to(organisation_activity_path(@organisation,activity), :class => "activity") do
             =image_for(activity, "147x147#")
             .label=activity
+    
 .row
   .twelvecol
     -options_panel do
@@ -72,3 +79,5 @@
         =link_if_allowed("Sleep organisation", sleep_organisation_proc(@organisation), :confirm => "Are you sure you want to 'sleep' this organisation?")
       =link_if_allowed("Delete organisation", @organisation, :method => :delete, :confirm => 'Are you sure you want to delete this organisation?')
       =link_if_allowed("New organisation", new_organisation_proc)
+      =link_if_allowed("Attach document", new_organisation_document_proc(:organisation_id => @organisation.id))
+      
